if pencil durability reaches 0 while editing, remaining characters should be blank spaces

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "testwatch": "jest --watchAll",
+    "test": "jest --watchAll",
     "start": "node main.js"
   },
   "repository": {
